--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-camel.springboot.main-run-controller=true
+#camel.springboot.main-run-controller=true
 spring.profiles.active=dev
 #spring.profiles.active=pro
 activemq.broker.url=vm://localhost
