--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 			<artifactId>camel-csv-starter</artifactId>
 			<version>${apache.camel.version}</version>
 		</dependency>
+		<dependency>
+    		<groupId>org.apache.activemq</groupId>
+    		<artifactId>activemq-kahadb-store</artifactId>
+    		<version>5.15.11</version>
+		</dependency>
+
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
