--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,12 @@
 	</properties>
 
 	<dependencies>
-		<!--
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-activemq</artifactId>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro</artifactId>
+			<version>1.9.1</version>
 		</dependency>
-		-->
+
 		<dependency>
 			<groupId>org.apache.camel.springboot</groupId>
 			<artifactId>camel-spring-boot-starter</artifactId>
@@ -82,6 +82,33 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.avro</groupId>
+				<artifactId>avro-maven-plugin</artifactId>
+				<version>1.9.1</version>
+				<executions>
+				  <execution>
+					<phase>generate-sources</phase>
+					<goals>
+					  <goal>schema</goal>
+					</goals>
+					<configuration>
+					  <sourceDirectory>${project.basedir}/src/main/resources/avro/</sourceDirectory>
+					  <outputDirectory>${project.basedir}/src/main/java/</outputDirectory>
+					</configuration>
+				  </execution>
+				</executions>
+			  </plugin>
+			  <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+				  <source>1.8</source>
+				  <target>1.8</target>
+				</configuration>
+			  </plugin>
+
 		</plugins>
 	</build>
 
